<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_color_selector" tools:context=".ColorSelector"
    android:weightSum="1"
    android:id="@+id/llMain">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerPadding="1dp"
        android:background="#ffffff">

        <EditText
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/etRed"
            android:hint="Nº entre 0 y 255"
            android:text="0"
            android:layout_weight="0.4" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/etGreen"
            android:hint="Nº entre 0 y 255"
            android:text="0"
            android:layout_weight="0.4" />

        <EditText
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/etBlue"
            android:hint="Nº entre 0 y 255"
            android:text="0"
            style="0.4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:weightSum="1"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvRed"
            android:id="@+id/tvRed"
            android:layout_weight="0.34"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvGreen"
            android:id="@+id/tvGreen"
            android:layout_weight="0.33"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvBlue"
            android:id="@+id/tvBlue"
            android:layout_weight="0.19"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="112dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChange"
            android:id="@+id/btnChange" />
    </LinearLayout>
</LinearLayout>